--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,9 @@
-##########################################
-#	Data Source
-##########################################
-spring.datasource.url = jdbc:postgresql://localhost:5432/lms
-spring.datasource.username = postgres
-spring.datasource.password = murali123
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#PROD
+#spring.profiles.active=prod
+#DEV
+spring.profiles.active=dev
 
-##########################################
-#	Hibernate / JPA
-##########################################
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = validate
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImproveNamingStrategy
-spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+server.port = 8090
 
 #########################################
 #	Thymeleaf
